# homebrew-envrcctl

./: .gitignore  Makefile  README.jp.md  README.md  pyproject.toml
.zed/: tasks.json
.zed/scripts/: verify  verify-release
Formula/: envrcctl.rb
completions/: envrcctl.bash  envrcctl.fish  envrcctl.zsh
docs/: audit_tamper_evident_plan_0.2.0.md  coverage_100_assessment.md  draft.md  impl_plan.md  impl_tickets.json  macos_device_owner_auth_plan.md  release_checklist.md  security_command_inventory.md  test_cli_split_plan.md  threat_model.md
docs/macos_device_owner_auth/: p1-t1.json  p1-t2.json  p2-t1.json  p2-t2.json  p3-t1.json  plan.md  tickets_list.json
native/: envrcctl-macos-auth.swift
scripts/: build_macos_auth_helper.sh  generate_completions.py  package_for_ship.sh  release_artifacts.py
scripts/macos/: envrcctl-macos-auth.swift
scripts/release/: package_for_ship.py
src/envrcctl/: __init__.py  auth.py  cli.py  command_runner.py  envrc.py  envrcctl-macos-auth  errors.py  keychain.py  managed_block.py  secrets.py  secretservice.py
src/envrctl/: __init__.py  envrc.py  main.py
tests/: test_auth.py  test_cli.py  test_cli_errors.py  test_cli_helpers.py  test_command_runner.py  test_envrc.py  test_keychain.py  test_main.py  test_managed_block.py  test_secrets.py  test_secretservice.py  test_smoke.py
