[project]
name = "envrcctl"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
envrcctl = "envrctl.main:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/envrctl"]

[tool.hatch.build.targets.sdist]
include = ["src/envrctl/**", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "bandit>=1.7.10",
]
