[project]
name = "envrcctl"
version = "0.0.1"
description = "Manage .envrc with managed blocks and OS-backed secrets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
envrcctl = "envrcctl.main:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/envrcctl"]

[tool.hatch.build.targets.sdist]
include = ["src/envrcctl/**", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "bandit>=1.7.10",
]
