[project]
name = "envrcctl"
version = "0.2.2"
description = "Manage .envrc with managed blocks and OS-backed secrets."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" },
]
dependencies = [
    "typer>=0.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/envrcctl"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "tests/**",
    "scripts/**",
    "completions/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "src/envrcctl/envrcctl-macos-auth",
]

[project.urls]
Homepage = "https://github.com/rioriost/envrcctl"
Issues = "https://github.com/rioriost/envrcctl/issues"
Repository = "https://github.com/rioriost/envrcctl"

[project.scripts]
envrcctl = "envrcctl.main:main"

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "bandit>=1.7.10",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
